# dip-assignments

./: .gitignore
assignment1/: README.md  main.py  requirements.txt
assignment1/src/: cce.py  otsu_adaptive.py  otsu_adaptive_fast.py  otsu_bc.py  otsu_ic.py
assignment1/tasks/: task1.py  task2.py  task3.py  task4.py
assignment_2/: CMakeLists.txt  README.md  run.sh
assignment_2/apps/: CMakeLists.txt  exp1.cpp  exp2.cpp  exp3.cpp  main.cpp
assignment_2/apps/include/apps/: exp1.hpp  exp2.hpp  exp3.hpp
assignment_2/include/imageproc/: binarize.hpp  filter.hpp  io.hpp  transforms.hpp
assignment_2/src/: binarize.cpp  filter.cpp  io.cpp  transforms.cpp
